--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 def releaseVersion = System.properties.RELEASE_VERSION
 version = releaseVersion ? releaseVersion : new SimpleDateFormat('yyyy-MM-dd\'T\'HH-mm-ss').format(new Date())
-group = 'com.graphql-java'
+group = 'se.lars.graphql-java'
 
 
 repositories {
